--- a/composer/configtx.yaml
+++ b/composer/configtx.yaml
@@ -22,13 +22,13 @@ Profiles:
         Consortiums:
             ComposerConsortium:
                 Organizations:
-                    - *Org1
+                    - *VLF
     ComposerChannel:
         Consortium: ComposerConsortium
         Application:
             <<: *ApplicationDefaults
             Organizations:
-                - *Org1
+                - *VLF
 
 ################################################################################
 #
@@ -51,20 +51,20 @@ Organizations:
         ID: OrdererMSP
 
         # MSPDir is the filesystem path which contains the MSP configuration
-        MSPDir: crypto-config/ordererOrganizations/example.com/msp
+        MSPDir: crypto-config/ordererOrganizations/vlf.zx.rs/msp
 
         # turn off security for the channel
         AdminPrincipal: Role.MEMBER
 
-    - &Org1
+    - &VLF
         # DefaultOrg defines the organization which is used in the sampleconfig
         # of the fabric.git development environment
-        Name: Org1
+        Name: VLF
 
         # ID to load the MSP definition as
-        ID: Org1MSP
+        ID: VLFMSP
 
-        MSPDir: crypto-config/peerOrganizations/org1.example.com/msp
+        MSPDir: crypto-config/peerOrganizations/vlf.zx.rs/msp
 
         # turn off security for the peer
         AdminPrincipal: Role.MEMBER
@@ -73,7 +73,7 @@ Organizations:
             # AnchorPeers defines the location of peers which can be used
             # for cross org gossip communication.  Note, this value is only
             # encoded in the genesis block in the Application section context
-            - Host: peer0.org1.example.com
+            - Host: peer0.vlf.zx.rs
               Port: 7051
 
 ################################################################################
@@ -91,7 +91,7 @@ Orderer: &OrdererDefaults
     OrdererType: solo
 
     Addresses:
-        - orderer.example.com:7050
+        - orderer.vlf.zx.rs:7050
         # - 192.168.243.46:7050
 
     # Batch Timeout: The amount of time to wait before creating a batch
